<resources>
    <string name="app_name">MyApplication</string>
    <string name="header">NetworkTest</string>
    <string name="enter_matrNr">Gib deine Matrikelnummer ein</string>
    <string name="insert_number_here">insert matrNr here</string>
    <string name="serverResponse">Serverantwort</string>
    <string name="confirmButton">ABSCHICKEN</string>
    <string name="calculate">BERECHNEN</string>
    <string name="responseCalculation">result of calculation will be here...</string>

</resources>