<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/networkTestTextfield"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:gravity="center_vertical|start"
        android:textSize="30sp"
        android:text="@string/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/textMatrNr"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/enter_matrNr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="413dp"
        android:layout_height="67dp"
        android:ems="10"
        android:hint="@string/insert_number_here"
        android:importantForAutofill="yes"
        android:inputType="number"
        android:labelFor="@id/textMatrNr"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMatrNr"
        />

    <TextView
        android:id="@+id/serverResponseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverResponse"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmButton"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/serverResponseTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="100dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>